crates/fyn-resolver/src/lock/snapshots/fyn_resolver__lock__tests__source_directory.snap
---
source: crates/fyn-resolver/src/lock/mod.rs
assertion_line: 6883
expression: result
---
Ok(
    Lock {
        version: 1,
        revision: 0,
        fork_markers: [],
        conflicts: Conflicts(
            [],
        ),
        supported_environments: [],
        required_environments: [],
        requires_python: RequiresPython {
            specifiers: VersionSpecifiers(
                [
                    VersionSpecifier {
                        operator: GreaterThanEqual,
                        version: "3.12",
                    },
                ],
            ),
            range: RequiresPythonRange(
                LowerBound(
                    Included(
                        "3.12",
                    ),
                ),
                UpperBound(
                    Unbounded,
                ),
            ),
        },
        options: ResolverOptions {
            resolution_mode: Highest,
            prerelease_mode: IfNecessaryOrExplicit,
            fork_strategy: RequiresPython,
            exclude_newer: ExcludeNewerWire {
                exclude_newer: None,
                exclude_newer_span: None,
                exclude_newer_package: ExcludeNewerPackage(
                    {},
                ),
            },
        },
        packages: [
            Package {
                id: PackageId {
                    name: PackageName(
                        "anyio",
                    ),
                    version: Some(
                        "4.3.0",
                    ),
                    source: Directory(
                        "path/to/dir",
                    ),
                },
                sdist: None,
                wheels: [],
                fork_markers: [],
                dependencies: [],
                optional_dependencies: {},
                dependency_groups: {},
                metadata: PackageMetadata {
                    requires_dist: {},
                    provides_extra: [],
                    dependency_groups: {},
                },
            },
        ],
        by_id: {
            PackageId {
                name: PackageName(
                    "anyio",
                ),
                version: Some(
                    "4.3.0",
                ),
                source: Directory(
                    "path/to/dir",
                ),
            }: 0,
        },
        manifest: ResolverManifest {
            members: {},
            requirements: {},
            dependency_groups: {},
            constraints: {},
            overrides: {},
            excludes: {},
            build_constraints: {},
            dependency_metadata: {},
        },
    },
)
